--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h3>...bcuz i messed up the previous one -.-</h3>
 <p>🍪🍪🍪🍪🍪🍪🍪</p>
 <p2>Download osu! today and improve your concentration and reaction time at: <iframe src="https://osu.ppy.sh/home/download" height="900" whith="900" title="osu! download link"></iframe></p2>
-
+  <img src="8fa9fb029452e513fc4225ffb4d549de.gif"></img src>
 <iframe src="https://www.w3schools.com/html/html_iframe.asp" height="1000" width="1000" title="Iframe Example"></iframe>
 
 </body>
