--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <!DOCTYPE html>
 <html>
 <body>
+<style>
+.center {
+  text-align: center;
+  border: 3px solid lime;
+</style>  
+<head> 
+<body>
 
-<h2>Testrun. (Take 2)...</h2>
+<div class="center">
+  <h2>David's Gaming Highlights.</h2>
+  </div>
 <h3>...bcuz i messed up the previous one -.-</h3>
 <p>🍪🍪🍪🍪🍪🍪🍪</p>
 <p2>Download osu! today and improve your concentration and reaction time at: www.osu.ppy.sh/download</p2>
