--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
-
 <!DOCTYPE html>
 <html>
 <body>
 <style>
 .center {
   text-align: center;
+  }
+  video {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 </style>  
 <head> 
 <body>
 
 <div class="center">
   <h2>David's Gaming Highlights.</h2>
-<h3>osu! gameplay (Preview)</h3> 
-  <video width="1200ht="1000" <controls>
+<h3>osu! gameplay (Preview)</h3>
+ 
+  <video width="320" height="240" controls>
   <source src="osu!  - LiSA - ADAMAS (TV Size) [Kibbleru's Insane] 2021-03-16 13-45-26.mp4" type="video/mp4">
-  
+  <source src="movie.ogg" type="video/ogg">
 </video>
+  
+
+
   <p2>Download osu! today and improve your concentration and reaction time at: www.osu.ppy.sh/download</p2>
   <p3> Goddess Stacia of Underworld </p3>  
   <img src="8fa9fb029452e513fc4225ffb4d549de.gif"></img src>
