--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   margin-right: auto;
 }
   body {
-  background-image: url=("168h0a88prb41.jpg");
+  background-image: url("168h0a88prb41.jpg");
 </style>  
 <head> 
 <body>
