--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <div class="center">
   <h2>David's Gaming Highlights.</h2>
 <h3>osu! gameplay (Preview)</h3>
+  <li><a href="osu!.html">osu! Gameplay </a></li>
+<li><a href="https://www.google.com/">Google</a></li>
  
   <video width="700" height="400" controls>
   <source src="osu!  - LiSA - ADAMAS (TV Size) [Kibbleru's Insane] 2021-03-16 13-45-26.mp4" type="video/mp4">
