--- a/osu!.html
+++ b/osu!.html
@@ -1,1 +1,4 @@
-
+<video width="700" height="400" controls>
+  <source src="osu!  - LiSA - ADAMAS (TV Size) [Kibbleru's Insane] 2021-03-16 13-45-26.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+</video>
