--- a/osu!.html
+++ b/osu!.html
@@ -1,6 +1,9 @@
 <html>
 <body>
-<video width="700" height="400" controls>
+  <h>osu! Videos</h>
+  <p>Only previews!</p>
+  <p>If you like the content and want to see more of my live gameplays, then visit me on https://www.twitch.tv/justcasualdavid.</p>
+  <video width="700" height="400" controls>
   <source src="osu!  - LiSA - ADAMAS (TV Size) [Kibbleru's Insane] 2021-03-16 13-45-26.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 </video>
