--- a/osu!.html
+++ b/osu!.html
@@ -1,5 +1,10 @@
 <html>
 <body>
+  <style>
+    h {
+      color:"Red";
+    }
+  </style>
   <h>osu! Videos</h>
   <p>Only previews!</p>
   <p>If you like the content and want to see more of my live gameplays, then visit me on https://www.twitch.tv/justcasualdavid.</p>
