--- a/osu!.html
+++ b/osu!.html
@@ -1,11 +1,12 @@
 <html>
 <body>
   <style>
-    h {
+    h2 {
       color:"Red";
     }
   </style>
-  <h>osu! Videos</h>
+  <h1><a href="https://pogdavid.github.io/">Home</a><h1>
+  <h2>osu! Videos</h2>
   <p>Only previews!</p>
   <li>If you like the content and want to see more of my live gameplays, then visit me on <a href="https://www.twitch.tv/justcasualdavid.">https://www.twitch.tv/justcasualdavid.</a></li>
   <video width="700" height="400" controls>
