--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <source src="Welcome to David'S.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 </video>
+    h3 {
+      color:"White"}
 </style>  
 <head> 
 <body>
