--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ body {
   
   <video autoplay muted loop id="Welcome to David'S.mp4">
   <source src="Welcome to David'S.mp4" type="video/mp4">
+  </video>
   
   
 <div class="center">
