--- a/osu!.html
+++ b/osu!.html
@@ -7,7 +7,7 @@
   <h1><a href="https://pogdavid.github.io/">Home</a><h1>
   <h2>osu! Videos</h2>
   <p>Only previews!</p>
-  <li>If you like the content and want to see more of my live gameplays, then visit me on <a href="https://www.twitch.tv/justcasualdavid."target="_blank">twitch.tv/justcasualdavid.</a></li>
+  <li>If you like the content and want to see more of my live gameplays, then visit me on <a href="https://www.twitch.tv/justcasualdavid"target="_blank">twitch.tv/justcasualdavid.</a></li>
   <video width="700" height="400" controls>
   <source src="osu!  - LiSA - ADAMAS (TV Size) [Kibbleru's Insane] 2021-03-16 13-45-26.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
