--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
   <h2>David's Gaming Highlights.</h2>
 <h3>osu! gameplay (Preview)</h3>
   <li><a href="osu!.html">osu! Gameplay </a></li>
-<li><a href="https://www.google.com/target="_blank"">Google</a></li>
+<li><a href="https://www.google.com/"target="_blank">Google</a></li>
 
   </div>
 
