--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <meta name="viewport" content="width=device-width, initial-scale=1">  
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
 .center {
   text-align: center;
@@ -43,7 +44,7 @@ body {
   </video>
   
   
-<div class="center">
+<div class="w3-container w3-black">
   <h2>David's Gaming Highlights.</h2>
 <h3>osu! gameplay (Preview)</h3>
   <li><a href="osu!.html">osu! Gameplay </a></li>
