--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@ body {
   
 <div class="w3-container w3-black">
   <h2>David's Gaming Highlights.</h2>
-<h3>osu! gameplay (Preview)</h3>
+  <h3>osu! gameplay (Preview)</h3>
   <li><a href="osu!.html">osu! Gameplay </a></li>
-<li><a href="https://www.google.com/"target="_blank">Google</a></li>
-
-  </div>
-
+  <li><a href="https://www.google.com/"target="_blank">Google</a></li>
+</div>
+  
+<footer class="w3-container w3-teal">
+  <h5>Footer</h5>
+  <p>Footer information goes here</p>
+</footer>
 
 </body>
 </html>
