--- a/index.html
+++ b/index.html
@@ -2,39 +2,11 @@
 <html>
 <body>
 <meta name="viewport" content="width=device-width, initial-scale=1">  
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://github.com/PogDavid/pogdavid.github.io/david.css">
+<!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+  
 <style>
-.center {
-  text-align: center;
-  }
-  video {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-  
-* {
-  box-sizing: border-box;
-}
 
-body {
-  margin: 0;
-  font-family: Arial;
-  font-size: 17px;
-}
-
-#myVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
-}
-  
-  
-
-    h3 {
-      color:"White"}
 </style>  
 <head> 
 <body>
@@ -44,7 +16,7 @@ body {
   </video>
   
   
-<div class="w3-container w3-black">
+<div class="center">
   <h2>David's Gaming Highlights.</h2>
   <h3>osu! gameplay (Preview)</h3>
   <li><a href="osu!.html">osu! Gameplay </a></li>
