--- a/osu!.html
+++ b/osu!.html
@@ -1,9 +1,7 @@
 <html>
 <body>
-  <style>
-    h2 {
-      color:"Red"; }
-  </style>
+    <link rel="stylesheet" href="https://github.com/PogDavid/pogdavid.github.io/david.css">
+  
   <h1><a href="https://pogdavid.github.io/">Home</a><h1>
   <h2>osu! Videos</h2>
   <p>Only previews!</p>
