--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html>
-<body>
+<html lang="en">
+<meta charset="UTF-8">
+<title>David's Gaming Highlights</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">  
 <link rel="stylesheet" href="https://github.com/PogDavid/pogdavid.github.io/david.css">
 <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
@@ -17,7 +17,7 @@
   
   
 <div class="center">
-  <h2>David's Gaming Highlights.</h2>
+  <h2>my red Highlights.</h2>
   <h3>osu! gameplay (Preview)</h3>
   <li><a href="osu!.html">osu! Gameplay </a></li>
   <li><a href="https://www.google.com/"target="_blank">Google</a></li>
