--- a/osu!.html
+++ b/osu!.html
@@ -1,9 +1,13 @@
-<html>
-<body>
-    <link rel="stylesheet" href="https://github.com/PogDavid/pogdavid.github.io/david.css">
-  
+<html lang="en">
+<meta charset="UTF-8">
+<title>OSU style</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">  
+<link rel="stylesheet" href="https://github.com/PogDavid/pogdavid.github.io/david.css">
+<body>  
   <h1><a href="https://pogdavid.github.io/">Home</a><h1>
-  <h2>osu! Videos</h2>
+  <div class= "w3-text-amber"> 
+    <h2>osu! Videos</h2>
+  </div>
   <p>Only previews!</p>
   <li>If you like the content and want to see more of my live gameplays, then visit me on <a href="https://www.twitch.tv/justcasualdavid"target="_blank">twitch.tv/justcasualdavid</a></li>
   <video width="700" height="400" controls>
