--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
+<!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
 <title>David's Gaming Highlights</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">  
 <link rel="stylesheet" href="https://github.com/PogDavid/pogdavid.github.io/david.css">
 <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-  
-<style>
 
-</style>  
-<head> 
 <body>
   
-  <video autoplay muted loop id="Welcome to David'S.mp4">
-  <source src="Welcome to David'S.mp4" type="video/mp4">
-  </video>
+  	<video autoplay muted loop id="Welcome to David'S.mp4">
+  		<source src="Welcome to David'S.mp4" type="video/mp4">
+  	</video>
   
-  
+  	<div class="w3-text-blue">
+		<h2>my blue Highlights.</h2>
+	</div> 
+	
+	
 <div class="center">
-  <h2>my red Highlights.</h2>
+	
+  
   <h3>osu! gameplay (Preview)</h3>
   <li><a href="osu!.html">osu! Gameplay </a></li>
-  <li><a href="https://www.google.com/"target="_blank">Google</a></li>
+  <li><a href="https://www.google.com/" target="_blank">Google</a></li>
 </div>
   
 <footer class="w3-container w3-teal">
