--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <meta charset="UTF-8">
 <title>David's Gaming Highlights</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">  
-<link rel="stylesheet" href="https://github.com/PogDavid/pogdavid.github.io/david.css">
-<!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+<link rel="stylesheet" href="https://github.com/PogDavid/pogdavid.github.io/blob/main/david.css"> 
+ <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 
 <body>
   
@@ -12,14 +12,14 @@
   		<source src="Welcome to David'S.mp4" type="video/mp4">
   	</video>
   
-  	<div class="w3-text-blue">
-		<h2>my blue Highlights.</h2>
-	</div> 
+	<div class="w3-container">
+		<div class="w3-text-blue">
+			<h2>my blue Highlights.</h2>
+		</div> 
+	</div>
 	
 	
-<div class="center">
-	
-  
+<div class="w3-blue">
   <h3>osu! gameplay (Preview)</h3>
   <li><a href="osu!.html">osu! Gameplay </a></li>
   <li><a href="https://www.google.com/" target="_blank">Google</a></li>
