--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <title>David's Gaming Highlights</title>
+<title>David's Gaming Highlights 2</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">  
 <link rel="stylesheet" href="https://github.com/PogDavid/pogdavid.github.io/blob/main/david.css"> 
  <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
