--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <meta charset="UTF-8">
 <title>David's Gaming Highlights 2</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">  
-<link rel="stylesheet" href="https://github.com/PogDavid/pogdavid.github.io/blob/main/david.css"> 
- <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-
+<link rel="stylesheet" href="Style/david.css">
 <body>
   
   	<video autoplay muted loop id="Welcome to David'S.mp4">
-  		<source src="Welcome to David'S.mp4" type="video/mp4">
+  		<source src="Media/Videos/Welcome to David'S.mp4" type="video/mp4">
   	</video>
   
 	<div class="w3-container">
