--- a/osu!.html
+++ b/osu!.html
@@ -1,19 +1,25 @@
+<!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
 <title>OSU style</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">  
-<link rel="stylesheet" href="https://github.com/PogDavid/pogdavid.github.io/david.css">
-<body>  
-  <h1><a href="https://pogdavid.github.io/">Home</a><h1>
-  <div class= "w3-text-amber"> 
-    <h2>osu! Videos</h2>
-    <p>dies sollte amber sein </p>
-  </div>
-  <p>Only previews!</p>
-  <li>If you like the content and want to see more of my live gameplays, then visit me on <a href="https://www.twitch.tv/justcasualdavid"target="_blank">twitch.tv/justcasualdavid</a></li>
-  <video width="700" height="400" controls>
-    <source src="osu!  - LiSA - ADAMAS (TV Size) [Kibbleru's Insane] 2021-03-16 13-45-26.mp4" type="video/mp4">
-    <source src="movie.ogg" type="video/ogg">
-  </video>
+<link rel="stylesheet" href="Style/david.css">
+<body>
+	<div class="w3-container">
+		<h1>
+			<a href="https://pogdavid.github.io/">Home</a>
+		</h1>
+	  	<div class= "w3-blue"> 
+			<h2>osu! Videos</h2>
+			<p>dies sollte blau sein </p>
+	  	</div>
+	  	<p class="w3-animate-left">Only previews!</p>
+	  	<div class="w3-animate-fading w3-round-small w3-border-aqua">'If you like the content and want to see more of my live gameplays, then visit me on'<a href="https://www.twitch.tv/justcasualdavid" target="_blank">twitch.tv/justcasualdavid</a>
+		</div>
+	  	<video controls height="40%" width="70%" class="w3-animate-top" align="center">
+			<source src="Media/Videos/osu!  - LiSA - ADAMAS (TV Size) [Kibbleru's Insane] 2021-03-16 13-45-26.mp4" type="video/mp4">
+			<source src="movie.ogg" type="video/ogg">
+	  	</video>
+	</div>
 </body>
 </html>
