--- a/osu!.html
+++ b/osu!.html
@@ -4,7 +4,7 @@
 <title>OSU style</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">  
 <link rel="stylesheet" href="Style/david.css">
-<body>
+<body background="/Media/Pictures/168h0a88prb41.jpg">
 	<div class="w3-container">
 		<h1>
 			<a href="https://pogdavid.github.io/">Home</a>
